Исправил ошибки в работе сортировки

--- a/src/components/table/tableHeader/style.sass
+++ b/src/components/table/tableHeader/style.sass
@@ -1,4 +1,13 @@
 .table__head
+
+
   button
     background-color: white
     box-sizing: border-box
+
+.sortUp
+  ::after
+    content: '↑'
+.sortDown
+  ::after
+    content: '↓'
