--- a/src/components/filter/style.sass
+++ b/src/components/filter/style.sass
@@ -1,7 +1,33 @@
+$select-color: #fff
+$select-background: #c0392b
+$select-width: 220px
+$select-height: 40px
+
 .block-filters
     display: flex
     width: 50vw
     text-align: center
-    margin-bottom: 20px
+    margin-bottom: 40px
     justify-content: space-around
 
+
+    select, input
+        width: calc(33% - 50px)
+        border-radius: 20px
+        font-size: 18px
+        background-color: #2c2c2c
+        color: white
+        padding: 7px
+
+
+    select
+        appearance: none
+        background: url('../../assets/Down_red_arrow.png') no-repeat right #2c2c2c
+        background-size: 20px
+        background-position-x: calc(100% - 8px)
+        text-align-last: left
+        padding-left: 29px
+
+
+        option
+            border-radius: 20px
