--- a/src/components/pagination/pageNumbers/style.sass
+++ b/src/components/pagination/pageNumbers/style.sass
@@ -1,10 +1,15 @@
 .page_number
-  height: 25px
-  width: 25px
+  height: 35px
+  width: 35px
   border-radius: 50%
   display: inline-block
   text-align: center
+  background-color: #4a4a4a
+  color: #ffffff
+  font-size: 20px
 
 .active
-  color: red
+  color: #ff0000
+  font-weight: bold
+  background-color: #2c2c2c
 
